--- a/RA2.tex
+++ b/RA2.tex
@@ -774,5 +774,5 @@ However, as discussed in Sec.~\ref{sec:susy}, if SUSY is supposed to provide a s
   \label{fig:8TeV_stop_limits}
 \end{figure}
 \\
-Here, top squarks with masses between 200--750\gev have been excluded for LSP masses below around 200\gev. Although these limits also approach the 1\tev mark, there is still lots of the parameter space uninvestigated. Since the LHC starts a second run period in 2015 with an increased centre of mass energy of $\sqrt{s} = 13$\tev, this parameter region up to 1\tev can be further investigated.\\
+Here, top squarks with masses between 200--750\gev have been excluded for LSP masses below around 200\gev. This corresponds to a generic tuning (as introduced in Sec.~\ref{subsec:natural_susy}) of $\Delta \lesssim 20$. Although this exceeds the traditional value of $\Delta \lesssim 10$ already, values up to $\Delta \lesssim 100$ are considered acceptable to date~\cite{Craig:2013cxa}. Consequently, a stop mass up to around 1\tev is considered eligible and lots of the parameter space is still not investigated. Since the LHC starts a second run period in 2015 with an increased centre of mass energy of $\sqrt{s} = 13$\tev, this mass region up to 1\tev can be further studied.\\
 A feasability study based on simulated events to explore direct stop quark pair-production at $\sqrt{s} = 13$\tev is presented in the next chapter. Here, also techniques introduced in Chap.~\ref{chap:Objects}, to identify boosted hadronically-decaying top quarks emerging from the stop quark decays, are employed.
