--- a/Thesis.bib
+++ b/Thesis.bib
@@ -2186,6 +2186,39 @@ author = "John Ellis and J.S. Hagelin and D.V. Nanopoulos and K. Olive and M. Sr
       year          = "2013",
 }
 
+@article{veltman1981infrared,
+  title={THE INFRARED - ULTRAVIOLET CONNECTION},
+  author={Veltman, Martinus JG},
+  journal={Acta Phys. Polon. B},
+  volume={12},
+  pages={437},
+  year={1981}
+}
+
+@article{Barbieri198863,
+title = "Upper bounds on supersymmetric particle masses ",
+journal = "Nuclear Physics B ",
+volume = "306",
+number = "1",
+pages = "63 - 76",
+year = "1988",
+note = "",
+issn = "0550-3213",
+doi = "http://dx.doi.org/10.1016/0550-3213(88)90171-X",
+url = "http://www.sciencedirect.com/science/article/pii/055032138890171X",
+author = "R. Barbieri and G.F. Giudice"
+}
+
+@article{Craig:2013cxa,
+      author         = "Craig, Nathaniel",
+      title          = "{The State of Supersymmetry after Run I of the LHC}",
+      year           = "2013",
+      eprint         = "1309.0528",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1309.0528;%%",
+}
+
 % --- Indirect searches for new physics -------------------
 @Article{Chen:2001fja,
      author    = "Chen, S. and others",
