--- a/Thesis.tex
+++ b/Thesis.tex
@@ -118,16 +118,16 @@ a4paper
 %      \textbf{\LARGE at the CMS Experiment} \\
       \vskip2.5cm
       \begin{Large} 
-        \textbf{Dissertation\\
-          zur Erlangung des Doktorgrades\\
-          des Fachbereichs Physik\\
+        \textbf{Dissertation zur Erlangung des Doktorgrades\\
+          an der Fakult\"{a}t f\"{u}r \\
+          Mathematik, Informatik und Naturwissenschaften\\
+          Fachbereich Physik\\
           der Universit\"{a}t Hamburg\\}
       \end{Large}
       \vskip2cm
       \begin{large}
         vorgelegt von\\
         {\bf Kristin Goebel geb. Heine}\\
-        aus Gifhorn
         \vfill
         \noindent{Hamburg\\2014}
       \end{large}
@@ -146,22 +146,27 @@ a4paper
 \vfill
 \noindent{
 \begin{tabular}{ll}
-Gutachter der Dissertation:                & Prof.\ Dr.\ bla \\ 
-                                           & Prof. \ Dr.\ bla\\
+Tag der Disputation:                     & 16. Januar 2015\\
                                            & \\
-Gutachter der Disputation:                 & Prof.\ Dr.\ bla\\ 
-                                           & Prof.\ Dr.\ bla\\
-                                           & \\
-Datum der Disputation:                     & ??. ?? 2014\\
-                                           & \\
-Vorsitzender des Pr\"{u}fungsausschusses:  & Dr.\ bla\\
-                                           & \\
-Vorsitzender des Promotionsausschusses:    & Prof.\ Dr.\ bla\\ 
-                                           & \\
-Leiterin des Fachbereichs Physik:          & Prof.\ Dr.\ bla \\
-                                           & \\
-Dekan der Fakult\"{a}t f\"{u}r Mathematik, & \\
-\quad Informatik und Naturwissenschaften:  & Prof.\ Dr.\ bla \\
+
+Folgende Gutachter empfehlen die Annahme der Dissertation:& Prof. Dr.\ Johannes Haller \\
+                                           & Jun.-Prof. Dr.\ Christian Sander\\
+%Gutachter der Dissertation:                & Prof.\ Dr.\ bla \\ 
+%                                           & Prof. \ Dr.\ bla\\
+%                                           & \\
+%Gutachter der Disputation:                 & Prof.\ Dr.\ bla\\ 
+%                                           & Prof.\ Dr.\ bla\\
+%                                           & \\
+%Datum der Disputation:                     & ??. ?? 2014\\
+%                                           & \\
+%Vorsitzender des Pr\"{u}fungsausschusses:  & Dr.\ bla\\
+%                                           & \\
+%Vorsitzender des Promotionsausschusses:    & Prof.\ Dr.\ bla\\ 
+%                                           & \\
+%Leiterin des Fachbereichs Physik:          & Prof.\ Dr.\ bla \\
+%                                           & \\
+%Dekan der Fakult\"{a}t f\"{u}r Mathematik, & \\
+%\quad Informatik und Naturwissenschaften:  & Prof.\ Dr.\ bla \\
 \end{tabular}
 }
 
