--- a/Theory.tex
+++ b/Theory.tex
@@ -125,25 +125,37 @@ with baryon number $B$, lepton number $L$ and spin $S$. It is a multiplicative q
 \item SUSY particles can only be produced in pairs at collider experiments as only even numbers of supersymmetric particles can occur at an interaction vertex.
 \item The lightest supersymmetric particle (LSP) is stable and thus any decay chain of a supersymmetric particle finally ends in a state containing an odd number of LSPs.
 \end{itemize}
-A $R$-parity conserving supersymmetric theory provides some elegant solutions to open questions, as raised in Sec.~\ref{subsec:sm_shortcomings}. As discussed there, the Higgs mass suffers from quadratically divergent contributions arising from higher-order corrections caused by SM particles. However, since in SUSY each SM particle gets a supersymmetric partner, these higher order corrections cancel. For instance for the fermion contributions described in Eq.~\ref{eq:hierarchy}, the quadratically divergent terms are canceled by contributions with opposite sign that arise from a scalar with same mass and thus the same coupling strength to the Higgs field. Since the same cancelation occurs for bosons vice versa, SUSY is able to provide a solution to the hierarchy problem. However, no observation of such kind of supersymmetric particles with exact same masses as their SM correpondents has been made, such that supersymmetry in fact has to be a broken symmetry. In order to still be able to provide a solution to the hierarchy problem, supersymmetric particles are expected to be not heavier than $\mathcal{O}(\mathrm{1\tev})$, which is typically referred to as \textit{natural supersymmetry}. This is the main argument why one would expect supersymmetric particles to be in the \tev range, well within the reach of the LHC. Especially the superpartner of the top quark is expected to be not too heavy in order to be able to cancel the contributions from top loops to the Higgs mass. This is necessary as these give the largest contributions, since the top quark is the heaviest particle in the SM. 
-\begin{figure}[!tp]
+A $R$-parity conserving supersymmetric theory provides some elegant solutions to open questions, as raised in Sec.~\ref{subsec:sm_shortcomings}:
+\begin{itemize}
+ \item The Higgs mass suffers from quadratically divergent contributions arising from higher-order corrections caused by SM particles. However, since in SUSY each SM particle gets a supersymmetric partner, these higher order corrections cancel. For instance for the fermion contributions described in Eq.~\ref{eq:hierarchy}, the quadratically divergent terms are canceled by contributions with opposite sign that arise from a scalar with same mass and thus the same coupling strength to the Higgs field. Since the same cancelation occurs for bosons vice versa, SUSY is able to provide a solution to the hierarchy problem. However, no observation of such kind of supersymmetric particles with exact same masses as their SM correpondents has been made, such that supersymmetry in fact has to be a broken symmetry. In order to still be able to provide a solution to the hierarchy problem, supersymmetric particles are expected to be not heavier than $\mathcal{O}(\mathrm{1\tev})$, which is typically referred to as \textit{natural supersymmetry}. This is the main argument why one would expect masses of supersymmetric particles to be in the TeV range, well within the reach of the LHC. Some more considerations about natural SUSY follow in Sec.~\ref{subsec:natural_susy}.
+ \item Considering the existence of supersymmetric particles, the coupling constants of the forces meet in one point when extrapolating the couplings from the electroweak to the GUT scale. This effect is illustrated in Fig.~\ref{fig:couplings}. It is visible that the evolution of the couplings is modified with respect to the SM at that energy scale where the supersymmetric particles enter. In general, this hints to the possibility of a grand unification.
+\begin{figure}[!t]
   \centering
   \begin{tabular}{c}
-    \includegraphics[width=0.65\textwidth]{figures/Couplings.jpg}
+    \includegraphics[width=0.6\textwidth]{figures/Couplings.jpg}
   \end{tabular}
   \caption{Comparison of the renormalization group evolution of the couplings $\alpha_{a}^{-1}$ in the SM (dashed lines) and the MSSM (solid lines) including two-loop effects. The masses of the supersymmetric particles in the MSSM are considered as a common threshold changing between 500\gev and 1.5\tev while the strong coupling constant $\alpha_{3}(m_{Z})$ is varied between 0.117 and 0.121. Taken from~\cite{Martin:1997ns}.}
   \label{fig:couplings}
 \end{figure}
-\\
-In addition to these aspects, the coupling constants of the forces meet in one point when extrapolating the couplings from the electroweak to the GUT scale considering the existence of supersymmetric particles. This effect is illustrated in Fig.~\ref{fig:couplings}. It is visible that the evolution of the couplings is modified with respect to the SM at that energy scale where the supersymmetric particles enter. In general, this hints to the possibility of a grand unification.\\
-Besides the two advantages discussed above, $R$-parity conserving SUSY models also provide a suitable dark matter candidate. As discussed previously, each decay of supersymmetric particles finally leads to the existence of an LSP which is stable. Thus, it is an adequate DM candidate when it is only weakly interacting. \\
-Furthermore, supersymmetry is in principal also suited to explain the observed matter-antimatter asymmetry in the universe, as especially, the description of supersymmetry breaking can involve $CP$-violating phases. However, these are often strongly constraint by experimental results (\cf for instance~\cite{Ibrahim:2007fb} for a comprehensive review). \\
-Moreover, supersymmetry might also provide an indication of the nature of gravity. As denoted in Sec.~\ref{subsec:sm_shortcomings}, it is currently not possible to unify general relativity and quantum theory. However, supersymmetry is a crucial requirement for \textit{string theories} which are the only suited candidates for a quantum field theory of gravity to date (see, \eg\cite{RevModPhys.47.123}).
+ \item $R$-parity conserving SUSY models provide a suitable dark matter candidate. As discussed previously, each decay of supersymmetric particles finally leads to the existence of an LSP which is stable. Thus, it is an adequate DM candidate when it is only weakly interacting.
+ \item Supersymmetry is in principal also suited to explain the observed matter-antimatter asymmetry in the universe, as especially, the description of supersymmetry breaking can involve $CP$-violating phases. However, these phases are strongly constraint by experimental results (\cf for instance~\cite{Ibrahim:2007fb} for a comprehensive review).
+ \item SUSY might also provide an indication of the nature of gravity. As denoted in Sec.~\ref{subsec:sm_shortcomings}, it is currently not possible to unify general relativity and quantum theory. However, supersymmetry is a crucial requirement for \textit{string theories} which are the only suited candidates for a quantum field theory of gravity to date (see, \eg\cite{RevModPhys.47.123}). 
+\end{itemize} 
+
+\subsection{Natural Supersymmetry}
+\label{subsec:natural_susy}
+As introduced above, SUSY models are considered natural, if they provide a solution to the hierarchy problem. Commonly, certain measures are introduced to estimate the naturalness of a supersymmetric model. \\
+One example is the Veltman definition of naturalness~\cite{veltman1981infrared}. This states that radiative contributions should not exceed tree-level effects in size, regarding the mass of a scalar particle. \\
+Another definition is given by Babieri and Giudice~\cite{Barbieri198863} which do not restrict the magnitude of the radiative corrections, but the sensitivity of the physical mass of a scalar $m$ to small changes in the bare couplings $\lambda_0$. This constraint is often imposed by quantifying the amount of necessary fine-tuning $\Delta$ according to
+\begin{equation}
+\left| \frac{\lambda_0}{m^2}\frac{\partial m^2}{\partial \lambda_0} \right| < \Delta \; .
+\end{equation}
+While the value of $\Delta$ has been set to $\sim10$ in the past, it increased over the years such that also values of $\sim100$ or even $\sim1000$ are considered as reasonable values~\cite{Craig:2013cxa}. Such boundaries can be used in order to derive constraints on the spectrum of superpartners which regulate the hierarchy problem. Here, it turns out that not all sparticles are equally important and thus, not all have to be situated at the same mass scale. Some typical mass ranges for sparticles considered as natural are given in Sec.~\ref{subsec:mssm}. 
 
 \subsection{The MSSM}
 \label{subsec:mssm}
 In general, it is possible to have theories with more than one supersymmetry transformation. However, the smallest possible supersymmetric extension of the SM including the full particle spectrum and interactions, \ie a $N = 1$ supersymmetry, is realised in the MSSM. An overview of the respective particle content is given in Tab.~\ref{tab:mssm_particles}. 
-\begin{table}[htbp] 
+\begin{table}[!t] 
   \centering
   \label{tab:mssm_particles}
 %   \makebox[\linewidth]{
@@ -180,14 +192,15 @@ As described in Sec.~\ref{sec:sm}, masses arise in the SM from the concept of sp
 m_{h^0} \lesssim 135 \gev \; .
 \end{equation*}
 Consequently, significant contributions from the top squark mass are required to push the mass of the lightest Higgs boson up to a value of around 125\gev. This is somewhat in tension to the requirement of having a stop quark mass close to the top mass in order to solve the hierarchy problem. However, it is still possible to accommodate a Higgs mass of 125\gev without the necessity to decouple the top squark or add new dynamics to the MSSM. These scenarios are referred to as \textit{maximal mixing}~\cite{Djouadi:2005gj}. \\
-As in the SM, the gauge eigenstates of the theory are not necessarily equal to the mass eigenstates. A mixing occurs especially in the gaugino sector. Here, the neutral components of the bino and wino mix with the neutral higgsinos and form four mass eigenstates called \textit{neutralinos} $\tilde{\chi}^0$. Similarly, also the charged gauginos and higgsinos mix to the four \textit{charginos} $\tilde{\chi}^{\pm}$. Furthermore, mixing can also appear in the third squark and slepton generation. The mixing is supposed to be significant only for fermions of the third generation as the off-diagonal elements of the sfermion mass matrix are proportional to the mass of the respective SM partner. 
+Similar to the SM, the gauge eigenstates of the SUSY theory are not necessarily equal to the mass eigenstates. A mixing occurs especially in the gaugino sector. Here, the neutral components of the bino and wino mix with the neutral higgsinos and form four mass eigenstates called \textit{neutralinos} $\tilde{\chi}^0$. Similarly, also the charged gauginos and higgsinos mix to the four \textit{charginos} $\tilde{\chi}^{\pm}$. Furthermore, mixing can also appear in the third squark and slepton generation. The mixing is supposed to be significant only for fermions of the third generation as the off-diagonal elements of the sfermion mass matrix are proportional to the mass of the respective SM partner. \\
+In order to obtain a natural realization of the MSSM, especially the superpartner of the top quark is expected to be not too heavy in order to be able to cancel the contributions from top loops to the Higgs mass. These give typically the largest contributions, since the top quark is the heaviest particle in the SM. Assuming a maximal accepted fine-tuning of $\Delta \lesssim 10$, the stop mass is supposed to be around 400\gev. Given these conditions, also light higgsinos are expected with a typical mass scale around 200\gev. Since gluinos yield loop corrections to the stop mass, they are expected to not significantly exceed the 1\tev range, as a second order effect~\cite{Craig:2013cxa}. 
 
 \subsection{SUSY-Breaking}
 \label{subsec:susy_breaking}
-\begin{figure}[!tp]
+\begin{figure}[!t]
   \centering 
   \begin{tabular}{c}
-    \includegraphics[width=0.65\textwidth]{figures/MSSMrun.png}
+    \includegraphics[width=0.6\textwidth]{figures/MSSMrun.png}
   \end{tabular}
   \caption{Evolution of scalar and gaugino mass parameters in the MSSM with mSUGRA boundary conditions imposed at $Q_0 = 2 \times 10^{16}$\gev. The parameter $\mu^2 + m^2_{H_{u}}$ runs negative, provoking electroweak symmetry breaking. Taken from~\cite{Martin:1997ns}.}
   \label{fig:MSSMrun}
