--- a/Objects.tex
+++ b/Objects.tex
@@ -86,7 +86,7 @@ In this thesis, the average response $\langle \mathcal{R} \rangle$ is referred t
   \caption{Sketch of the factorized approach used for jet energy corrections at the CMS experiment.}
   \label{fig:jec_sketch}
 \end{figure}
-In order to relate the measured jet momentum on average to the momentum of the corresponding particle-level jet, a jet calibration procedure is applied. This compensates for the non-linear response of the calorimeters and ensures that $\langle \mathcal{R} \rangle = 1$. Within the CMS experiment, a factorized approach is utilized which is described in detail in~\cite{1748-0221-6-11-P11002}. The actual set of correction factors used in this thesis, if not stated otherwise, is documented in~\cite{CMS-DP-2013-033}. \\
+In order to relate the measured jet momentum on average to the momentum of the corresponding particle-level jet, a jet calibration procedure is applied. This compensates for the non-linear response of the calorimeters and ensures that $\langle \mathcal{R} \rangle = 1$. Within the CMS experiment, a factorized approach is utilized which is described in detail in~\cite{1748-0221-6-11-P11002} and illustrated in Fig.~\ref{fig:jec_sketch}. The actual set of correction factors used in this thesis, if not stated otherwise, is documented in~\cite{CMS-DP-2013-033}. \\
 The calibrated jet four-momentum vector $p^\mathrm{cor}$ is obtained from the raw jet momentum four-vector $p^\mathrm{raw}$ by scaling the raw momentum with a correction factor $C$ according to
 \begin{equation}
 p^\mathrm{cor} = C \cdot p^\mathrm{raw} = C_{\mathrm{offset}}(\pt^\mathrm{raw}, \eta) \cdot C_{\mathrm{rel}}(\eta) \cdot C_{\mathrm{abs}}(\pt') \cdot C_\mathrm{res}(\pt'', \eta) \cdot p^\mathrm{raw}
