--- a/Theory.tex
+++ b/Theory.tex
@@ -269,7 +269,7 @@ In addition to various different production channels, also the decay of supersym
       \includegraphics[width=0.49\textwidth]{figures/T2qq.pdf}
     \end{center}
   \end{minipage}
-  \caption{Example diagrams of different SUSY decay channels showing $\tilde{g} \rightarrow q\bar{q} \tilde{\chi}_1^0$ (\textit{top left}), $\tilde{g} \rightarrow t\bar{t}\tilde{\chi}_1^0$ (\textit{top right}) and $\tilde{q} \rightarrow q\tilde{\chi}_1^0$ (\textit{bottom}).}
+  \caption{Example diagrams of different SUSY decay channels showing $\tilde{g} \rightarrow q\bar{q} \tilde{\chi}_1^0$ (\textit{top left}), $\tilde{g} \rightarrow t\bar{t}\tilde{\chi}_1^0$ (\textit{top right}) and $\tilde{q} \rightarrow q\tilde{\chi}_1^0$ (\textit{bottom})~\cite{bib:CMS:PhysicsResultsSUS}.}
   \label{fig:susy_decay}
 \end{figure}
 \\
