--- a/Detector.tex
+++ b/Detector.tex
@@ -53,7 +53,7 @@ A typical characteristic of calorimeters is given by the ratio $e/h$. This quant
 \begin{equation}
 \frac{\pi}{e} = \frac{f_\mathrm{em}\, e + (1 - f_\mathrm{em}) h}{e} = \frac{1+(e/h - 1) f_\mathrm{em}}{e/h}
 \end{equation}
-with the \textit{electromagnetic fraction} $f_\mathrm{em}$, \ie the fraction of the hadronic shower transferred into an electromagnetic component via the decay of neutral pions into two photons initiating an electromagnetic shower. Since $f_\mathrm{em}$ depends on the energy, the same holds true for $\pi/e$ and the calorimeter response is said to be \textit{non-linear}. \\
+with the \textit{electromagnetic fraction} $f_\mathrm{em}$, \ie the fraction of the hadronic shower transferred into an electromagnetic component via the decay of neutral pions into two photons initiating an electromagnetic shower. Since $f_\mathrm{em}$ depends on the energy, the same holds for $\pi/e$ and the calorimeter response is said to be \textit{non-linear}. \\
 Furthermore, the calorimeter performance can be characterized by the relative calorimeter energy-resolution
 \begin{equation}
 \frac{\sigma(E)}{E}= \frac{N}{E} \oplus \frac{S}{\sqrt{E}} \oplus C 
