--- a/Resolution.tex
+++ b/Resolution.tex
@@ -6,7 +6,7 @@ In this chapter, an analysis is presented in which the jet-\pt resolution in dat
 \begin{figure}[!tp]
   \centering
   \begin{tabular}{c}
-                \includegraphics[width=0.49\textwidth]{figures/TruthResponse_example_final_nominal_v4.pdf}
+                \includegraphics[width=0.49\textwidth]{figures/TruthResponse_example_test.pdf}
   \end{tabular}
   \caption{Jet response distribution for one example $|\eta^\mathrm{gen}|$ and $\pt^\mathrm{gen}$ interval derived from simulation.}
   \label{fig:response}
@@ -154,10 +154,10 @@ Finally, some example asymmetry distributions obtained after the described selec
 \begin{figure}[!tp]
   \centering
   \begin{tabular}{cc}
-                \includegraphics[width=0.49\textwidth]{figures/AsymmHistos_Eta0_pt4_alpha1_final_nominal_v4.pdf} &
-                \includegraphics[width=0.49\textwidth]{figures/AsymmHistos_Eta0_pt9_alpha1_final_nominal_v4.pdf} \\ 
-                \includegraphics[width=0.49\textwidth]{figures/AsymmHistos_Eta0_pt4_alpha5_final_nominal_v4.pdf} &
-                \includegraphics[width=0.49\textwidth]{figures/AsymmHistos_Eta0_pt9_alpha5_final_nominal_v4.pdf}
+                \includegraphics[width=0.49\textwidth]{figures/AsymmHistos_Eta0_pt4_alpha1_final_nominal_v4b.pdf} &
+                \includegraphics[width=0.49\textwidth]{figures/AsymmHistos_Eta0_pt9_alpha1_final_nominal_v4b.pdf} \\ 
+                \includegraphics[width=0.49\textwidth]{figures/AsymmHistos_Eta0_pt4_alpha5_final_nominal_v4b.pdf} &
+                \includegraphics[width=0.49\textwidth]{figures/AsymmHistos_Eta0_pt9_alpha5_final_nominal_v4b.pdf}
   \end{tabular}
   \caption{Some example asymmetry distributions for the lowest $|\eta|$ region, two medium $\pt^\mathrm{ave}$ intervals and for a low (\textit{top}) and a high (\textit{bottom}) $\alpha$ interval.}
   \label{fig:asymm_dists}
@@ -171,11 +171,11 @@ From the tails of the jet response, events with large asymmetries can emerge lea
   \centering
   \begin{tabular}{cc}
                 \includegraphics[width=0.49\textwidth]{figures/AsymmHistosDataWithRatio_Eta0_pt5_alpha2_final_nominal_NoTruncation_v4.pdf} &
-                \includegraphics[width=0.49\textwidth]{figures/AsymmHistosSimWithRatio_Eta0_pt5_alpha2_final_nominal_NoTruncation_v4.pdf} \\ 
+                \includegraphics[width=0.49\textwidth]{figures/AsymmHistosSimWithRatio_Eta0_pt5_alpha2_final_nominal_NoTruncation_v4b.pdf} \\ 
                 \includegraphics[width=0.49\textwidth]{figures/AsymmHistosDataWithRatio_Eta0_pt5_alpha2_final_nominal_v4.pdf} &
-                \includegraphics[width=0.49\textwidth]{figures/AsymmHistosSimWithRatio_Eta0_pt5_alpha2_final_nominal_v4.pdf} \\
+                \includegraphics[width=0.49\textwidth]{figures/AsymmHistosSimWithRatio_Eta0_pt5_alpha2_final_nominal_v4b.pdf} \\
                 \includegraphics[width=0.49\textwidth]{figures/AsymmHistosDataWithRatio_Eta0_pt5_alpha2_final_nominal_95Truncation_v4.pdf} &
-                \includegraphics[width=0.49\textwidth]{figures/AsymmHistosSimWithRatio_Eta0_pt5_alpha2_final_nominal_95Truncation_v4.pdf} \\
+                \includegraphics[width=0.49\textwidth]{figures/AsymmHistosSimWithRatio_Eta0_pt5_alpha2_final_nominal_95Truncation_v4b.pdf} \\
   \end{tabular}
   \caption{Asymmetry distributions for data (\textit{left}) and simulation (\textit{right}) compared to Gaussian distributions obtained with standard deviations corresponding to 0\% truncation (\textit{top}), 1.5\% truncation (\textit{middle}) and 5\% truncation (\textit{bottom}) of the respective upper tail.}
   \label{fig:asymm_width}
@@ -250,8 +250,8 @@ with $p_\mathrm{T,1}^\mathrm{gen}$ and $p_\mathrm{T,2}^\mathrm{gen}$ referring t
 \begin{figure}[!tp]
   \centering
   \begin{tabular}{cc}
-                \includegraphics[width=0.49\textwidth]{figures/Extrapol_Eta0_pt4_gen_final_nominal_v4.pdf} &
-                \includegraphics[width=0.49\textwidth]{figures/Extrapol_Eta0_pt9_gen_final_nominal_v4.pdf}
+                \includegraphics[width=0.49\textwidth]{figures/Extrapol_Eta0_pt4_gen_final_nominal_v4b.pdf} &
+                \includegraphics[width=0.49\textwidth]{figures/Extrapol_Eta0_pt9_gen_final_nominal_v4b.pdf}
   \end{tabular}
   \caption{Two example extrapolations of measured values for $\sigma^\mathrm{gen}_\mathrm{A}$ in simulation to determine the contribution from PLI.}
   \label{fig:extrapol_gen}
@@ -269,13 +269,13 @@ The results of the various extrapolation fits to determine $ \sigma_\mathrm{A}(\
 \begin{figure}[!htp]
   \centering
   \begin{tabular}{cc}
-                \includegraphics[width=0.49\textwidth]{figures/Extrapol_Eta0_final_nominal_v4.pdf} &
-                \includegraphics[width=0.49\textwidth]{figures/Extrapol_Eta1_final_nominal_v4.pdf} \\
+                \includegraphics[width=0.49\textwidth]{figures/Extrapol_Eta0_final_nominal_v4b.pdf} &
+                \includegraphics[width=0.49\textwidth]{figures/Extrapol_Eta1_final_nominal_v4b.pdf} \\
   %              \includegraphics[width=0.49\textwidth]{figures/Extrapol_Eta2_final_nominal_v4.pdf} &
   %              \includegraphics[width=0.49\textwidth]{figures/Extrapol_Eta3_final_nominal_v4.pdf} \\
   %              \includegraphics[width=0.49\textwidth]{figures/Extrapol_Eta4_final_nominal_v4.pdf}
   \end{tabular}
-  \caption{Results of extrapolation fits in the two central $|\eta|$ regions as a function of $\pt^\mathrm{ave}$ for data, simulation and particle-level imbalance.}
+  \caption{Results of extrapolation fits in the two central $|\eta|$ regions as a function of $\pt^\mathrm{ave}$ for data (black), simulation (red) and particle-level imbalance (blue).}
   \label{fig:fit-results}
 \end{figure}
 \\
@@ -290,11 +290,11 @@ The same PLI correction is substracted both from data as well as from simulation
 \begin{figure}[!htp]
   \centering
   \begin{tabular}{cc}
-                \includegraphics[width=0.49\textwidth]{figures/ExtrapolRatio_Eta0_with_pli_final_nominal_v4.pdf} &
-                \includegraphics[width=0.49\textwidth]{figures/ExtrapolRatio_Eta1_with_pli_final_nominal_v4.pdf} \\
-                \includegraphics[width=0.49\textwidth]{figures/ExtrapolRatio_Eta2_with_pli_final_nominal_v4.pdf} &
-                \includegraphics[width=0.49\textwidth]{figures/ExtrapolRatio_Eta3_with_pli_final_nominal_v4.pdf} \\
-                \includegraphics[width=0.49\textwidth]{figures/ExtrapolRatio_Eta4_with_pli_final_nominal_v4.pdf}
+                \includegraphics[width=0.49\textwidth]{figures/ExtrapolRatio_Eta0_with_pli_final_nominal_v4b.pdf} &
+                \includegraphics[width=0.49\textwidth]{figures/ExtrapolRatio_Eta1_with_pli_final_nominal_v4b.pdf} \\
+                \includegraphics[width=0.49\textwidth]{figures/ExtrapolRatio_Eta2_with_pli_final_nominal_v4b.pdf} &
+                \includegraphics[width=0.49\textwidth]{figures/ExtrapolRatio_Eta3_with_pli_final_nominal_v4b.pdf} \\
+                \includegraphics[width=0.49\textwidth]{figures/ExtrapolRatio_Eta4_with_pli_final_nominal_v4b.pdf}
   \end{tabular}
   \caption{Ratio of the resolution in data to the resolution in the \pythia QCD sample in non-empty $|\eta|$ regions as a function of $\pt^\mathrm{ave}$ shown together with a constant fit (red line) and corresponding statistical uncertainty (grey shaded area).}
   \label{fig:ratio}
@@ -312,8 +312,8 @@ The determined data-to-simulation ratios are summarized later together with stat
 \begin{figure}[!tp]
   \centering
   \begin{tabular}{cc}
-                \includegraphics[width=0.49\textwidth]{figures/ScalingFactorsVsEta_with_pli_PythiaSmearedVsPythia_v4.pdf} &
-                \includegraphics[width=0.49\textwidth]{figures/ScalingFactorsVsEta_with_pli_MCSmearedWithMeasuredValues_final_v4.pdf}
+                \includegraphics[width=0.49\textwidth]{figures/ScalingFactorsVsEta_with_pli_PythiaSmearedVsPythia_v4b.pdf} &
+                \includegraphics[width=0.49\textwidth]{figures/ScalingFactorsVsEta_with_pli_MCSmearedWithMeasuredValues_final_v4b.pdf}
   \end{tabular}
   \caption{Ratio $c\mathrm{(MC_{smeared}/MC)}$ of the resolution in the smeared QCD sample to the resolution of the unsmeared QCD sample as a function of $|\eta|$ with statistical uncertainty (\textit{left}) and ratio $c\mathrm{(Data/MC_{smeared})}$ of the resolution in data to the resolution of the QCD sample smeared with the measured data-to-simulation ratio as function of $|\eta|$ with statistical uncertainty (\textit{right}). The line indicates the target value of each validation test.}
   \label{fig:mc_closure}
