--- a/Resolution.tex
+++ b/Resolution.tex
@@ -626,6 +626,22 @@ Earlier analyses using dijet events for data collected at $\sqrt{s}=7$\tev have 
 The results obtained from different methods and for the different centre of mass energies are well compatible with each other. The main advantage of the dijet measurement presented in this thesis compared to the $\gamma +\rm{jet}$ analysis is that one obtains also results for the outermost $|\eta|$ region. In addition, the total uncertainties in the other $|\eta|$ regions are at a same accuracy or even slightly lower. \\
 In comparison to the $\sqrt{s}=7$\tev results from dijet events, the total uncertainty could be significantly reduced by incorporating the correlation among the different inclusive $\alpha$ regions in the extrapolation procedure. In the previous analyses, the statistical uncertainties were underestimated by not considering the above mentioned correlation. This effect was compensated by introducing a rather conservative systematic uncertainty on the extrapolation to zero additional jet activity. Since the treatment of the statistical uncertainty has been changed in this analysis, the estimation of systematic effects could be adjusted accordingly and lead to the overall reduced uncertainty values summarized in Table~\ref{tab:result}.
 
+\subsection{Impact of the Improved JER Measurement}
+\label{subsec:jer_results_impact}
+As mentioned in the introduction of this chapter, the jet transverse-momentum resolution is a key ingredient for several analyses. In this section, the impact of the improved JER measurement is discussed for two use cases. \\
+First, the influence of the JER measurement on the jet energy corrections is examined. As the derived data-to-simulation factors for the resolution feature a dependence on $|\eta|$ and denote difference data and simulation, it is important to propagate their uncertainty to the L2 residual correction of the jet energy scale. The impact of the JER uncertainty on the L2 residual correction is illustrated in Fig.~\ref{fig:result_jec_impact}.  
+\begin{figure}[!h]
+  \centering
+  \begin{tabular}{c}
+                \includegraphics[width=0.49\textwidth]{figures/newJER_L2V4_L3fixed-ratio_mod.jpg} 
+  \end{tabular}
+  \caption{Impact of the JER uncertainty on the L2 residual correction. The variation of the correction with respect to the nominal correction factor is shown as a function of the pseudorapidity~\cite{DRathjens}. For further explanation see text.}
+  \label{fig:result_jec_impact}
+\end{figure}
+\\
+The blue-shaded band denotes the uncertainty on the L2 residual correction caused by the uncertainty of the JER measurement from 2011 dijet data, as illustrated in Fig.~\ref{fig:result_comparison} (right). Red and green dots illustrate the resulting up and down variation of the L2 residual correction when propagating the JER uncertainty, as determined in the analysis presented in this thesis. Closed and open symbols represent two different methods used to derive the L2 residual correction. Especially in the forward region of the detector, the uncertainty is reduced by about 50\%. \\
+Furthermore, the improved jet resolution measurement has a major impact on the determination of the top-quark mass. The currently most precise single measurement of the top-quark mass from CMS is performed in the lepton+jets channel and yields a top quark mass of $m_t = 172.04 \pm 0.19\; \mathrm{(stat.+JSF)} \pm 0.75\;\mathrm{(syst.)}$\gev~\cite{CMS-PAS-TOP-14-001}. The propagated uncertainty of the jet transverse-momentum resolution is among the dominant systematic uncertainties and amounts to 0.26\gev when considering the data-to-simulation scale factors as measured with the 2011 dijet data. The improved uncertainty on the JER scale factors decreases the contribution to the systematic uncertainties of the top-quark mass measurement from 0.26\gev to 0.11\gev. Accordingly, the total systematic uncertainty drops from 0.75\gev to 0.71\gev. Consequently, the precision of the top-quark mass measurement in the above mentioned lepton+jets channel reaches the accuracy of the currently overall most precise single measurement of the top-quark mass which yields a total uncertainty of 0.76\gev, as performed by the \dzero experiment~\cite{Abazov:2014dpa}.  
+
 \section{Adjustment of the MC-Resolution to Data}
 \label{sec:jer_adjustment}
 The determined data-to-simulation ratios as given in Tab.~\ref{fig:result_2012} can be used to adjust the resolution in simulated events to match the measured resolution in data. This can be done with different approaches depending on what the actual purpose of the analysis is. \\
