--- a/Thesis.bib
+++ b/Thesis.bib
@@ -2621,6 +2621,11 @@ primaryClass   = "hep-ph"
   year = {2014}
 }
 
+@misc{DRathjens,
+  note = "D.~Rathjens, private communication",
+  year = {2014}
+}
+
 @article{bib:AN2013-416,
  author = {Kristin Goebel and Johannes Haller and Jochen Ott and Hartmut Stadie},
  title = {Jet Transverse Momentum Resolution Measurement using Dijet Events at $\sqrt{s} = 8$\tev},
@@ -2647,7 +2652,33 @@ primaryClass   = "hep-ph"
   year          = {2011}
 }
 
+@techreport{CMS-PAS-TOP-14-001,
+      title         = "{Measurement of the top-quark mass in t t-bar events with
+                       lepton+jets final states in pp collisions at sqrt(s)=8
+                       TeV}",
+      institution   = "CERN",
+      collaboration = "CMS Collaboration",
+      address       = "Geneva",
+      number        = "CMS-PAS-TOP-14-001",
+      year          = "2014",
+}
 
+@article{Abazov:2014dpa,
+      author         = "Abazov, Victor Mukhamedovich and others",
+      title          = "{Precision measurement of the top-quark mass in
+                        lepton+jets final states}",
+      collaboration  = "D0 Collaboration",
+      journal        = "Phys.Rev.Lett.",
+      volume         = "113",
+      pages          = "032002",
+      doi            = "10.1103/PhysRevLett.113.032002",
+      year           = "2014",
+      eprint         = "1405.1756",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "FERMILAB-PUB-14-123-E",
+      SLACcitation   = "%%CITATION = ARXIV:1405.1756;%%",
+}
 
 @article{Salam:2009jx,
       author         = "Salam, Gavin P.",
