--- a/Thesis.tex
+++ b/Thesis.tex
@@ -65,6 +65,7 @@ a4paper
 \usepackage{textcomp}
 \usepackage{pdfpages}
 \usepackage[latin1]{inputenc}
+\usepackage{todonotes}
 
 %\usepackage{setspace}
 %\doublespacing
