--- a/Abstract.tex
+++ b/Abstract.tex
@@ -1,4 +1,4 @@
 \section*{Abstract}
-The search for signals of new physics beyond the standard model of particle physics is one of the main goals of the CMS experiment at the CERN Large Hadron Collider. Since many theories, like for instance supersymmetry, involve the production of new coloured particles which feature jets as their experimental signature, it is important to have a good understanding of jet related properties in order to allow such searches.\\
-In the first part of this thesis, a measurement of the jet transverse momentum resolution is presented based on the analysis of proton-proton collision data recorded at a centre of mass energy of $\sqrt{s}=8$\tev by the CMS experiment. The measurement utilizes the transverse momentum balance of dijet events at particle level. The main focus lies on the determination of the data-to-simulation ratio of the jet transverse-momentum resolution which can be used to correct the jet resolution in simulated events to match the observed one in data.\\
-The second part of the thesis focuses on searches for supersymmetry in final states with jets and missing transverse momentum. First, a search performed on collision data recorded at $\sqrt{s}=8$\tev is presented which targets mainly signatures sensitive to the production of light-flavour squarks and gluinos as well as the production of gluino mediated third generation particles. Here, the main focus lies on the estimation of background contributions arising from QCD multijet events. Second, a study based on simulated events at a centre of mass energy of  $\sqrt{s}=13$\tev is shown investigating different search strategies towards the identification of direct pair production of top squarks. Utilizing algorithms for the identification of boosted hadronically decaying top quarks arising from the decay of heavy top squarks, a search sensitivity of top squark masses up to 1\tev is expected for LSP masses less than approximately 200\gev.   
+The search for new physics beyond the standard model of particle physics is one of the main goals of the CMS experiment at the CERN Large Hadron Collider. Many theories, for instance supersymmetry, involve the production of new coloured particles, which feature jets as their experimental signature. Thus, it is important to have a good understanding of jet-related properties in order to allow such searches.\\
+In the first part of this thesis, a measurement of the jet transverse momentum resolution is presented. This is based on the analysis of proton-proton collision data recorded at a centre of mass energy of $\sqrt{s}=8$\tev by the CMS experiment. The measurement utilizes the transverse momentum balance of dijet events at particle level. The main focus lies on the determination of the data-to-simulation ratio of the jet transverse-momentum resolution which can be used to correct the jet resolution in simulated events to match the observed one in data. This ratio has been determined with a significantly improved precision compared to previous analyses for the pseudorapidity range $0.0 \leq |\eta| \leq 5.0$. \\ 
+The second part of the thesis focuses on searches for supersymmetry in final states with jets and missing transverse momentum. A search performed with collision data recorded at $\sqrt{s}=8$\tev is presented, which targets signatures sensitive to the production of light-flavour squarks and gluinos as well as the production of gluino-mediated third generation particles. Here, the main focus lies on the estimation of background contributions arising from QCD multijet events. In the analysis, results consistent with standard model expectations have been obtained and the production of light-flavour squarks below 780\gev and that of gluinos up to 1.1--1.2\tev has been excluded at $95\%$ confidence level for a mass of the lightest-supersymmetric particle (LSP) not exceeding 100\gev in the context of simplified supersymmetric models. Furthermore, a study based on simulated events at a centre of mass energy of  $\sqrt{s}=13$\tev is shown, investigating different search strategies towards the identification of direct pair production of top squarks. Utilizing algorithms for the identification of boosted hadronically decaying top quarks arising from the decay of heavy top squarks, a search sensitivity of top squark masses up to the 1\tev range can be obtained for LSP masses less than approximately 300\gev with the same integrated luminosity as recorded at $\sqrt{s}=8$\tev.   
