--- a/Thesis.tex
+++ b/Thesis.tex
@@ -75,7 +75,7 @@ a4paper
 \hyphenation{Super-sym-me-try}
 \hyphenation{maximum-like-li-hood}
 \hyphenation{vor-ge-stel-lt}
-%\hyphenation{End-zu-stän-den}
+%\hyphenation{End-zu-st\"an-den}
 
 \input{definitions.tex}
 
@@ -137,21 +137,21 @@ a4paper
 \end{titlepage}
 
 
-\newpage 
-\thispagestyle{empty}
-\quad 
-\newpage
-\thispagestyle{empty}
+%\newpage 
+%\thispagestyle{empty}
+%\quad 
+%\newpage
+%\thispagestyle{empty}
 
-\quad
-\vfill
-\noindent{
-\begin{tabular}{ll}
-Tag der Disputation:                     & 16. Januar 2015\\
-                                           & \\
+%\quad
+%\vfill
+%\noindent{
+%\begin{tabular}{ll}
+%Tag der Disputation:                     & 6. Februar 2015\\
+%                                           & \\
 
-Folgende Gutachter empfehlen die Annahme der Dissertation:& Prof. Dr.\ Johannes Haller \\
-                                           & Jun.-Prof. Dr.\ Christian Sander\\
+%Folgende Gutachter empfehlen die Annahme der Dissertation:& Prof. Dr.\ Johannes Haller \\
+%                                           & Jun.-Prof. Dr.\ Christian Sander\\
 %Gutachter der Dissertation:                & Prof.\ Dr.\ bla \\ 
 %                                           & Prof. \ Dr.\ bla\\
 %                                           & \\
@@ -168,8 +168,8 @@ Folgende Gutachter empfehlen die Annahme der Dissertation:& Prof. Dr.\ Johannes 
 %                                           & \\
 %Dekan der Fakult\"{a}t f\"{u}r Mathematik, & \\
 %\quad Informatik und Naturwissenschaften:  & Prof.\ Dr.\ bla \\
-\end{tabular}
-}
+%\end{tabular}
+%}
 
 
 \newpage 
@@ -179,6 +179,8 @@ Folgende Gutachter empfehlen die Annahme der Dissertation:& Prof. Dr.\ Johannes 
 \newpage
 \thispagestyle{empty}
 \input{Abstract.tex}
+
+\cleardoublepage
 
 \newpage
 \thispagestyle{empty}
