--- a/Kurzfassung.tex
+++ b/Kurzfassung.tex
@@ -1,4 +1,4 @@
 \section*{Kurzfassung}
-Die Suche nach Hinweisen auf Prozesse von neuer Physik jenseits des Standardmodells der Teilchenphysik ist eines der Hauptziele des CMS Experiments am CERN Large Hadron Collider. Da zahlreiche Theorien wie beispielsweise Supersymmetrie die Produktion von neuen farbgeladenen Teilchen, welche als experimentelle Signatur Jets aufweisen, beinhalten, ist es wichtig ein gutes Verst\"andnis dieser Objekte zu erlangen um derartige Suchen zu ermoeglichen.\\
-Im ersten Teil dieser Arbeit wird eine Messung der Jet-Transversalimpuls-Aufl\"osung vorgestellt, welche auf der Analyse von Proton-Proton-Kollisionsdaten basiert, die bei einer Schwerpunktsenergie von $\sqrt{s}=8$\tev vom CMS Experiment aufgezeichnet wurden. Die Messung basiert auf der Transversalimpulsbalance von Zweijet-Ereignissen auf Teilchenniveau. Der Fokus liegt dabei auf der Bestimmung des Verh\"altnisses der Aufl\"osung in Daten zu der Aufl\"osung in simulierten Ereignissen, welches verwendet werden kann um die in simulierten Ereignissen gemessene Aufl\"osung an die in Daten beobachtete anzupassen.\\
-Der zweite Teil der Arbeit konzentriert sich auf Suchen nach Supersymmetrie in Endzuständen mit Jets und fehlendem Transversalimpuls. Zun\"achst wird eine Suche unter Verwendung von bei einer Schwerpunktsenergie von $\sqrt{s}=8$~\tev aufgezeichneten Kollisionsdaten durchgef\"uhrt, die auf Signaturen abzielt, welche haupts\"achlich sensitiv sind auf die Produktion von leichten-flavour Squarks und Gluinos sowie die Produktion von gluinoindizierten Teilchen der dritten Generation. Der Schwerpunkt liegt hier auf der Absch\"atzung des Untergrundbeitrags durch QCD Mulijet Ereignisse. Als zweites wird eine Studie vorgestellt, welche auf simulierten Ereignissen bei einer Schwerpunktsenergie von $\sqrt{s}=13$\tev basiert und unterschiedliche Analysestrategien zur Identifikation von direkt produzierten Top Squarks untersucht. Unter Verwendung von Algorithmen zur Identifikation von geboosteten hadronisch zerfallenden Top Quarks aus den Zerf\"allen von Top Squarks, kann eine Sensitivit\"at der Suche f\"ur Top Squark Massen bis 1~\tev f\"ur LSP Massen bis circa 200~\gev erwartet werden.      
+Die Suche nach neuer Physik jenseits des Standardmodells der Teilchenphysik ist eines der Hauptziele des CMS-Experiments am CERN Large Hadron Collider. Zahlreiche Theorien, beispielsweise Supersymmetrie, beinhalten die Produktion von neuen farbgeladenen Teilchen, welche als experimentelle Signatur Jets aufweisen. Deshalb ist es wichtig, ein gutes Verst\"andnis dieser Objekte zu erlangen, um derartige Suchen zu erm\"oglichen.\\
+Im ersten Teil dieser Arbeit wird eine Messung der Jet-Transversalimpuls-Aufl\"osung vorgestellt, welche auf der Analyse von Proton-Proton-Kollisionsdaten basiert, die bei einer Schwerpunktsenergie von $\sqrt{s}=8$\tev vom CMS-Experiment aufgezeichnet wurden. Die Messung basiert auf der Transversalimpulsbalance von Zweijet-Ereignissen auf Teilchenebene. Der Fokus liegt dabei auf der Bestimmung des Verh\"altnisses der Aufl\"osung in Daten zu der Aufl\"osung in simulierten Ereignissen, welches verwendet werden kann, um die Aufl\"osung in simulierten Ereignissen an die in Daten beobachtete anzupassen. Dieses Verh\"altnis wurde mit einer signifikant verbesserten Pr\"azision im Vergleich zu vorherigen Analysen f\"ur einen Pseudorapidit\"atsbereich von $0.0 \leq |\eta| \leq 5.0$ bestimmt. \\
+Der zweite Teil der Arbeit konzentriert sich auf Suchen nach Supersymmetrie unter Verwendung von Endzuständen mit Jets und fehlendem Transversalimpuls. Es wird eine Suche vorgestellt, die auf Kollisionsdaten basiert, welche bei einer Schwerpunktsenergie von $\sqrt{s}=8$\tev aufgezeichnet wurden, und auf Signaturen abzielt, welche haupts\"achlich sensitiv sind auf die Produktion von leichten-flavour Squarks und Gluinos sowie die Produktion von gluino-indizierten Teilchen der dritten Generation. Der Schwerpunkt liegt hier auf der Absch\"atzung des Untergrundbeitrags aus QCD Mulijet Ereignissen. In der Analyse werden Ergebnisse erzielt, die mit der Erwartung aus dem Standardmodell kompatibel sind. Damit wird die Produktion von leichten Squarks unter 780\gev und die von Gluinos unter 1,1--1,2\tev im Kontext von vereinfachten supersymmetrischen Modellen mit 95\% confidence level f\"ur eine Masse des leichtesten supersymmetrischen Teilchens (LSP) unter 100\gev ausgeschlossen. Weiterhin wird eine Studie basierend auf simulierten Ereignissen bei einer Schwerpunktsenergie von $\sqrt{s}=13$\tev vorgestellt, welche unterschiedliche Analysestrategien zur Identifikation von direkt produzierten Top-Squarks untersucht. Unter Verwendung von Algorithmen zur Identifikation von geboosteten hadronisch zerfallenden Top-Quarks aus den Zerf\"allen von Top-Squarks, kann mit derselben integrierten Luminosit\"at wie bei $\sqrt{s}=8$\tev aufgezeichnet wurden, eine Sensitivit\"at der Suche f\"ur Top Squark Massen bis 1\tev f\"ur LSP Massen unter 300\gev erreicht werden.      
